# ascii-art-generator

./: .gitignore  ANCHOR_IMPLEMENTATION_SUMMARY.md  ANCHOR_SETUP.md  INTEGRATION_EXAMPLE.md  NFT_MINTING_SETUP.md  QUICK_START_WASM.md  SETUP_CHECKLIST.md  SIMPLE_FLOW.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-rust-backend.yml
app/: globals.css  layout.tsx  page.tsx
app/Components/: Ascii-art-generator.tsx  AsciiActions.tsx  AsciiCanvas.tsx  Footer.tsx  Header.tsx  ImageCompressionBenchmark.tsx  MintButton.tsx  NFTCollection.tsx  Navbar.tsx  PageLayout.tsx  ProgramStatsDashboard.tsx  ToggleNetworkButton.tsx  UserLevelCard.tsx  WalletButton.tsx  walletAddressCard.tsx
app/Components/Providers/: network-provider.tsx  query-provider.tsx  wallet-provider.tsx
app/Components/Sidebar/: Sidebar.tsx
app/Components/Sidebar/sections/: BasicAdjustments.tsx  CharacterSet.tsx  DisplaySettings.tsx  DitheringOptions.tsx  EdgeDetection.tsx  GenerateImageSection.tsx  GenerateTextSection.tsx  GlobalSettings.tsx  ResetButton.tsx
app/Components/UserLevelCard/: UserLevelCard.tsx  index.ts  utils.ts
app/Components/hooks/: useSphereAnimation.ts  useUserLevelData.ts
app/Components/smartcontracts/ascii/: Anchor.toml  Cargo.toml
app/Components/smartcontracts/ascii/programs/ascii/: Cargo.toml
app/Components/smartcontracts/ascii/programs/ascii/src/: constants.rs  errors.rs  events.rs  lib.rs  processor.rs
app/Components/smartcontracts/ascii/programs/ascii/src/instructions/: execute_buyback.rs  initialize_config.rs  mint_ascii_nft.rs  mod.rs  update_config.rs
app/Components/smartcontracts/ascii/programs/ascii/src/state/: mod.rs
app/Components/store/: ascii-store.ts
app/Components/utils/: ascii-converter-wasm.ts  fetch-program-stats.ts  idl.d.ts  image-compression-benchmark.ts  mint-nft-anchor.ts  network-config.ts  storage-bundlr.ts  storage-nft.ts  сompress-image-wasm.ts
app/backend/: COMMIT_MESSAGE_SUGGESTIONS.md  GIT_COMMIT_EXAMPLES.md  PERFORMANCE_COMPARISON.md  benchmark-comparison.sh
app/backend/ascii-art-generator-backend/: README.md  jest.config.js  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vercel.json
app/backend/ascii-art-generator-backend/api/: index.ts
app/backend/ascii-art-generator-backend/src/: app.module.ts  main.ts
app/backend/ascii-art-generator-backend/src/config/: buyback.config.ts  solana.config.ts  throttler.config.ts  validation.schema.ts
app/backend/ascii-art-generator-backend/src/health/: health.controller.ts  health.module.ts
app/backend/ascii-art-generator-backend/src/nft/: nft.module.ts
app/backend/ascii-art-generator-backend/src/nft/controllers/: nft.controller.ts
app/backend/ascii-art-generator-backend/src/nft/entities/: buyback-event.entity.ts  nft.entity.ts  user-level.entity.ts  user.entity.ts
app/backend/ascii-art-generator-backend/src/nft/services/: buyback-executor.service.ts  buyback-monitor.service.ts  buyback-sheduler.service.ts  event-parser.service.ts  jupiter-integration.service.ts  nft-storage.service.ts  solana-indexer.service.ts
app/backend/ascii-art-generator-backend/src/nft/services/__tests__/: event-parser.service.spec.ts  jupiter-integration.service.spec.ts  nft-storage.service.spec.ts  user-level.entity.spec.ts
app/backend/ascii-art-generator-backend/src/nft/utils/: level-calculator.ts
app/backend/ascii-art-generator-backend/test/: nft.e2e-spec.js  nft.e2e-spec.js.map  nft.e2e-spec.ts
app/backend/backend-rust/: .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json
app/backend/backend-rust/api/: buybacks.rs  health.rs  indexer_status.rs  nft_by_mint.rs  router.rs  statistics.rs  stats.rs  status.rs  user_info.rs  user_level.rs  user_nfts.rs  user_shard_status.rs
app/backend/backend-rust/migrations/: 20240101000000_initial.sql
app/backend/backend-rust/src/: config.rs  error.rs  lib.rs  main.rs
app/backend/backend-rust/src/handlers/: health.rs  mod.rs  nft.rs
app/backend/backend-rust/src/models/: buyback_event.rs  level_calculator.rs  mod.rs  nft.rs  user.rs  user_level.rs
app/backend/backend-rust/src/services/: event_parser.rs  jupiter_integration.rs  mod.rs  nft_storage.rs  solana_indexer.rs
app/backend/benchmark-results/: benchmark_20251211_010233.json  benchmark_20251211_010538.json  benchmark_20251211_011148.json  benchmark_20251211_011338.json  benchmark_20251211_011748.json  benchmark_20251211_195655.json  benchmark_20251211_195950.json  benchmark_20251211_202005.json  benchmark_20251211_203046.json  benchmark_20251211_205220.json  benchmark_20251211_210535.json  benchmark_20251211_221416.json
app/components/: Ascii-art-generator.tsx  AsciiActions.tsx  Footer.tsx  Header.tsx  MintButton.tsx  Navbar.tsx  WalletButton.tsx
app/components/Sidebar/: Sidebar.tsx
app/components/Sidebar/sections/: BasicAdjustments.tsx  CharacterSet.tsx  DisplaySettings.tsx  DitheringOptions.tsx  EdgeDetection.tsx  GenerateTextSection.tsx  GlobalSettings.tsx  ResetButton.tsx  UploadImageSection.tsx
app/components/smartcontracts/ascii/: Anchor.toml
app/components/smartcontracts/ascii/programs/ascii/: Cargo.toml
app/components/smartcontracts/ascii/programs/ascii/src/: lib.rs
app/components/store/: ascii-store.ts
app/components/utils/: ascii-converter-wasm.ts  ascii-converter.ts  idl.d.ts  mint-nft-anchor.ts  storage-bundlr.ts
app/image-compression-benchmark/: page.tsx
app/profile/: PageLayout.tsx  page.tsx
app/utils/: api.ts
scripts/: build-wasm.js
wasm-ascii/: .gitignore  Cargo.toml
wasm-ascii/pkg/: README.md  package.json  wasm_ascii.d.ts  wasm_ascii.js  wasm_ascii_bg.wasm  wasm_ascii_bg.wasm.d.ts
wasm-ascii/src/: image_compression.rs  lib.rs  sphere_animation.rs  text_in_center.rs
